<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="io.github.rlshep.bjcp2015beerstyles.CategoryBodyActivity">

    <include
        android:id="@+id/scbToolbar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sectionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TextView
                    android:id="@+id/srmText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textIsSelectable="true" />

                <TableRow android:layout_width="fill_parent">

                    <TextView
                        android:id="@+id/srmBoxStart1"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp" />

                    <TextView
                        android:id="@+id/srmBoxEnd1"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp" />
                </TableRow>

                <TextView
                    android:id="@+id/srmText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textIsSelectable="true" />

                <TableRow android:layout_width="fill_parent">

                    <TextView
                        android:id="@+id/srmBoxStart2"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp" />

                    <TextView
                        android:id="@+id/srmBoxEnd2"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>