package io.github.rlshep.bjcp2015beerstyles.en;

import androidx.test.espresso.Espresso;
import androidx.test.rule.ActivityTestRule;

import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;

import io.github.rlshep.bjcp2015beerstyles.BJCPTest;
import io.github.rlshep.bjcp2015beerstyles.MainActivity;
import io.github.rlshep.bjcp2015beerstyles.R;
import io.github.rlshep.bjcp2015beerstyles.matchers.Matchers;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static io.github.rlshep.bjcp2015beerstyles.constants.BjcpConstants.BJCP_2021;
import static io.github.rlshep.bjcp2015beerstyles.constants.BjcpConstants.GUIDELINE_MAP;
import static io.github.rlshep.bjcp2015beerstyles.constants.BjcpConstants.getKeyValue;
import static org.hamcrest.CoreMatchers.anything;

public class Category2021Test extends BJCPTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityRule = new ActivityTestRule(MainActivity.class);

    @Before
    public void setup() {
        setGuideline(getKeyValue(GUIDELINE_MAP, BJCP_2021));
        setLanguage("English");
        setSrmSgAbv(true, true, true);
    }

    @Test
    public void testCategoryStrongAle_en() {
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Strong British Ale", 17)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(17).perform(click());
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("British Strong Ale: Burton Ale", 2)));
    }

    @Test
    public void testCategoryMead_en() {
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Mead 2015", 37)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(37).perform(click());
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Introduction to Mead Guidelines", 0)));
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Traditional Mead", 1)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(0).perform(click());
        onView(withId(R.id.sectionsText)).check(matches(Matchers.hasValueEqualTo("Sweetness")));
        Espresso.pressBack();
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(1).perform(click());
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Dry Mead", 1)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(1).perform(click());
        onView(withId(R.id.sectionsText)).check(matches(Matchers.hasValueEqualTo("Impression")));
    }

    @Test
    public void testCategorySaison() {
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Strong Belgian Ale", 25)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(25).perform(click());
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Saison", 2)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(2).perform(click());

        onView(withId(R.id.sectionsText)).check(matches(Matchers.hasValueEqualTo("(standard) ABV: 5.0% - 7.0%")));
        onView(withId(R.id.srmText1)).check(matches(Matchers.hasValueEqualTo("(dark) SRM")));
        onView(withId(R.id.srmText2)).check(matches(Matchers.hasValueEqualTo("(pale) SRM")));
    }

    @Test
    public void testCategoryWoodAged() {
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Wood Beer", 33)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(33).perform(click());
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Wood-Aged Beer", 1)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(1).perform(click());

        onView(withId(R.id.sectionsText)).check(matches(Matchers.hasValueEqualTo("ABV: varies with base style, typically above-average")));
    }

    @Test
    public void testCategoryIntro() {
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Introductions", 0)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(0).perform(click());
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Introduction to the 2021 Guidelines", 0)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(0).perform(click());

        onView(withId(R.id.sectionsText)).check(matches(Matchers.hasValueEqualTo("Do not overly focus")));
    }

    @Test
    public void testCategoryIntroStyles() {
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Introductions", 0)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(0).perform(click());
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Introduction to Beer Styles", 1)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(1).perform(click());

        onView(withId(R.id.sectionsText)).check(matches(Matchers.hasValueEqualTo("fruitiness (esters).")));
    }

    @Test
    public void testCategoryIntroSpecialty() {
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Introductions", 0)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(0).perform(click());
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Introduction to Specialty-Type Beer", 2)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(2).perform(click());

        onView(withId(R.id.sectionsText)).check(matches(Matchers.hasValueEqualTo("Hop aroma may be absent")));
    }

    @Test
    public void testCategoryRoggen() {
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Historical Beer", 27)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(27).perform(click());
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Historical Beer: Roggenbier", 8)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(8).perform(click());

        onView(withId(R.id.sectionsText)).check(matches(Matchers.hasValueEqualTo(" Dunkles Weissbier made with rye")));
    }

    @Test
    public void testCategoryLastInHistoricalList() {
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Historical Beer", 27)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(27).perform(click());
        onView(withId(R.id.categoryListView)).check(matches(Matchers.hasListViewEqualTo("Historical Beer: Sahti", 9)));
        onData(anything()).inAdapterView(withId(R.id.categoryListView)).atPosition(9).perform(click());

        onView(withId(R.id.sectionsText)).check(matches(Matchers.hasValueEqualTo(" Finnish farmhouse beer usually with rye and juniper, and a banana-clove yeast character")));
    }
}
